--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+    <meta name="theme-color" content="dark/light" />
+    <title>To Do List</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cool react App to control your tasks!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="keywords" content="todo, to, do, list, tasks, app, react, oskar, czerw" />
+  
+  <meta property="og:type" content="application" />
+  <meta property="og:title" content="Oskar Czerw | To Do List" />
+  <meta property="og:description" content="Hi! Check out my new react App! It's the easiest way to control your tasks!" />
+  <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+  <meta property="og:url" content="%PUBLIC_URL%" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
